--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,6 @@ jobs:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.twine_password }}
         run: |
-          echo TWINE_USERNAME=$TWINE_USERNAME >> /tmp/.env
-          echo TWINE_PASSWORD=$TWINE_PASSWORD >> /tmp/.env
-          make deploy
+          pip install twine
+          make build
+          python3 -m twine upload --non-interactive --repository pypi dist/*
