--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Deploy
         env:
           TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.twine_password }}
+          TWINE_PASSWORD: ${{ secrets.best_fucking_effort_is_trash }}
         run: |
           pip install twine
           make build
