--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,4 +39,4 @@ jobs:
         run: |
           pip install twine
           make build
-          python3 -m twine upload --non-interactive --repository pypi dist/*
+          python3 -m twine upload --verbose --non-interactive --repository pypi dist/*
