--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "functional_parsing_library"
+readme = "README.md"
 version = "0.0.7"
 authors = [
   { name="Wessel Bindt", email="wesselbindt@gmail.com" },
