--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "functional_parsing_library"
 readme = "README.md"
-version = "0.0.8"
+version = "0.0.9"
 authors = [
   { name="Wessel Bindt", email="wesselbindt@gmail.com" },
 ]
@@ -14,6 +14,9 @@ requires-python = ">=3.12"
 classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
+]
+dependencies = [
+    "pytest==8.0.1",
 ]
 
 [tool.pytest.ini_options]
