Tighten up mypy

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,7 @@ addopts = "--doctest-modules"
 
 [tool.ruff.lint]
 select = ["W", "F"]
+
+[tool.mypy]
+warn_unused_configs = true
+disallow_untyped_defs = true
