--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ addopts = "--doctest-modules"
 
 [tool.ruff.lint]
 select = ["W", "F"]
+ignore = ["F403"]
 
 [tool.mypy]
 warn_unused_configs = true
